<resources>
    <!-- application general -->
    <string name="app_name">数独App</string>

    <!-- title screen -->
    <string name="app_title">数独\n-SUDOKU-</string>
    <string name="title_image">sudoku.jpg</string>
    <string name="easy_button_text">初級</string>
    <string name="normal_button_text">中級</string>
    <string name="hard_button_text">上級</string>

    <!-- sudoku screen -->
    <string name="sudoku_difficulty_easy">- 初級 -</string>
    <string name="sudoku_difficulty_normal">- 中級 -</string>
    <string name="sudoku_difficulty_hard">- 上級 -</string>
    <string name="sudoku_timer_date_format">mm:ss</string>
    <string name="sudoku_miss_count_text1">ミス回数：</string>
    <string name="sudoku_miss_count_text2">/3</string>
    <string name="sudoku_number_button_1">1</string>
    <string name="sudoku_number_button_2">2</string>
    <string name="sudoku_number_button_3">3</string>
    <string name="sudoku_number_button_4">4</string>
    <string name="sudoku_number_button_5">5</string>
    <string name="sudoku_number_button_6">6</string>
    <string name="sudoku_number_button_7">7</string>
    <string name="sudoku_number_button_8">8</string>
    <string name="sudoku_number_button_9">9</string>
    <string name="sudoku_eraser_button">消す</string>
    <string name="sudoku_back_button">一つ戻す</string>
    <string name="sudoku_empty_cell">" "</string>
    <string name="sudoku_hint_cell_update_alert_toast_message">空欄のマスを埋めようね！</string>
    <string name="sudoku_hint_cell_erase_alert_toast_message">このマスは消せないよ！</string>
    <string name="sudoku_back_button_under_construction_toast_message">まだ未実装だから二度と押さないでね！</string>
    <string name="sudoku_incorrect_number_toast_message">ミス！もう一度考えよう！</string>
    <string name="sudoku_game_clear_toast_message">クリア！おめでとう！！</string>
    <string name="sudoku_miss_count_over_toast_message">ゲームオーバーです。。。もう一度挑戦してね</string>

    <!-- keys -->
    <string name="KEY_DIFFICULTY_KIND">KEY_DIFFICULTY_KIND</string>
</resources>