<?xml version="1.0" encoding="utf-8"?>
<!-- sudoku screen layout -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sudoku_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stage_no"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_horizontal"
            android:textColor="@color/sudoku_stage_no_text_color"
            android:textSize="@dimen/button_text_size"
            android:fontFamily="@font/noto_serif_jp_regular"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/playing_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/sudoku_stage_no_text_color"
                android:textSize="@dimen/button_text_size"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/miss_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/sudoku_stage_no_text_color"
                android:textSize="@dimen/button_text_size"
                android:layout_weight="1"
                />
        </LinearLayout>

        <fragment
            android:id="@+id/sudoku_grid_fragment"
            android:name="com.example.sudokuapp.fragment.SudokuGridFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/sudoku_grid_margin_side"
            android:layout_marginRight="@dimen/sudoku_grid_margin_side"
            android:layout_weight="0.75"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.25"
            android:gravity="center|bottom">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/number_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_number_button_1"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/number_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_number_button_2"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/number_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_number_button_3"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/number_4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_number_button_4"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/number_5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_number_button_5"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/number_6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_number_button_6"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/number_7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_number_button_7"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/number_8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_number_button_8"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/number_9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_number_button_9"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/eraser_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_eraser_button"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="0.5"
                    />
                <Button
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sudoku_back_button"
                    android:textColor="@color/sudoku_stage_no_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:background="@color/sudoku_background"
                    android:layout_weight="0.5"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>