<?xml version="1.0" encoding="utf-8"?>
<!-- title screen fragment -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/title_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin_side"
            android:layout_marginRight="@dimen/title_margin_side"
            android:fontFamily="@font/noto_serif_jp_regular"
            android:text="@string/app_title"
            android:textSize="@dimen/title_font_size"
            android:gravity="center_horizontal"
            android:textColor="@color/title_text_color"
            android:shadowColor="@color/title_text_shadow_color"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="20"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin_side"
            android:layout_marginRight="@dimen/title_margin_side"
            android:src="@drawable/sudoku"
            android:contentDescription="@string/title_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/easy_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin_side"
                android:layout_marginBottom="@dimen/title_margin_side"
                android:text="@string/easy_button_text"
                android:textSize="@dimen/button_text_size"
                android:fontFamily="@font/new_tegomin_regular"
                android:background="@color/title_easy_button_text_color"
                />

            <Button
                android:id="@+id/normal_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin_side"
                android:layout_marginBottom="@dimen/title_margin_side"
                android:layout_marginLeft="@dimen/title_margin_side"
                android:layout_marginRight="@dimen/title_margin_side"
                android:text="@string/normal_button_text"
                android:textSize="@dimen/button_text_size"
                android:fontFamily="@font/new_tegomin_regular"
                android:background="@color/title_normal_button_text_color"
                />

            <Button
                android:id="@+id/hard_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin_side"
                android:layout_marginBottom="@dimen/title_margin_side"
                android:text="@string/hard_button_text"
                android:textSize="@dimen/button_text_size"
                android:fontFamily="@font/new_tegomin_regular"
                android:background="@color/title_hard_button_text_color"
                />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>